@@ -98,6 +98,9 @@ public:
 	/// paralyze unit depending on maxHealth? if not depending on current health, default true
 	bool paralyzeOnMaxHealth;
 
+	/// time it takes for paralysis to decay by 100% in seconds
+	float paralyzeDeclineRate;
+
 	// Transportation behaviour
 	/// 0 = all ground units cannot be transported, 1 = all ground units can be transported (mass and size restrictions still apply). Defaults to 1.
 	int transportGround;
